Fix Issues and Adjust Values

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSAntenna.cfg
@@ -19,9 +19,8 @@ PART
 	rescaleFactor = 1.0
 
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
-	//node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,0,0,0
 
 	//	============================================================================
 	//	Title, Description, Category, Techs
@@ -38,7 +37,7 @@ PART
 	description = A set of two antennas used by Soyuz and Progress KURS system for communicating with the target.
 	tags = soyuz, progress, DECQ
 
-	bulkheadProfiles = size1, srf
+	bulkheadProfiles = size1
 
 	//	=============================================================================
 	//	Thermo, Durability
@@ -50,6 +49,8 @@ PART
 	minimum_drag = 0.25
 	angularDrag = 0.5
 	crashTolerance = 10
+	breakingForce = 250
+	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 673.15
 
@@ -59,15 +60,14 @@ PART
 
 	MODULE
 	{
-		name = ModuleDeployableAntenna
-		showStatus = false
-		isTracking = false
-		pivotName = 15
-		windResistance = 1
+		name = ModuleAnimateGeneric
 		animationName = DockingAntenna
-		extendActionName = Extend Antenna
-		retractActionName = Retract Antenna
-		extendpanelsActionName = Toggle Antenna
+		isOneShot = False
+		allowManualControl = True
+		startEventGUIName = Deploy KURS Antenna
+		endEventGUIName = Retract KURS Antenna
+		actionGUIName = Toggle KURS Antenna
+		allowAnimationWhileShielded = False
 	}
 }
 
