--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -23,8 +23,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.036991, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.7998706, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 1.037, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.8, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_periscope = 0.0, 0.1247507, -0.989488, 0.0, -1.0, 0.0, 1
 	node_stack_parahute = 0.5, 0.5, 0.5, 0.0, -1.0, 0.0, 1
 	node_stack_parahuteRezerv = -0.5, 0.5, 0.5, 0.0, -1.0, 0.0, 1
@@ -32,6 +32,8 @@ PART
 
 	CoPOffset = 0, 0.4, 0.0	
 	CoMOffset = 0.0, -0.1, 0.08275
+
+	buoyancy = 1.3
 
 	attachRules = 1,0,1,1,0
 
@@ -52,7 +54,7 @@ PART
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
 	CrewCapacity = 3
-	bulkheadProfiles = size2, size1
+	bulkheadProfiles = size2
 
 	//	=============================================================================
 	//	Thermo, Durability
@@ -139,7 +141,7 @@ PART
 		name = ModuleScienceContainer
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
-		storageRange = 2.0
+		storageRange = 3.125
 	}
 
 	MODULE
@@ -149,6 +151,8 @@ PART
 		EngineType = SolidBooster
 		allowShutdown = False
 		throttleLocked = True
+		useEngineResponseTime = False
+		engineAccelerationSpeed = 0
 		fxOffset = 0, 0, 0.35
 	}
 
@@ -156,19 +160,21 @@ PART
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
-		configuration = SoyuzMSRetro
-		modded = false
+		configuration = SLE-M
 		CONFIG
 		{
-			name = SoyuzMSRetro
+			name = SLE-M
 			minThrust = 30
 			maxThrust = 30
 			heatProduction = 100
-
 			ullage = False
 			pressureFed = False
 			ignitions = 1
-
+			IGNITOR_RESOURCE
+			{
+				name = ElectricCharge
+				amount = 0.6
+			}
 			PROPELLANT
 			{
 				name = HTPB
@@ -233,6 +239,15 @@ PART
 		storedStrings = v 0.2.0.0|06.11.2016|	Soyuz	|SOYUZ-TMA|(MODIFIED)|SQD0A4012-A1|MK1|		 DECQ   &   Dragon
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = False
+		surfaceAttachmentsPassable = False
+		impassablenodes = bottom, periscope, parahute, parahuteRezerv
+	}
+
 	MODULE
 		{
 		name = ModuleFuelTanks
@@ -269,9 +284,13 @@ PART
 
 @PART[ROC-SoyuzMSCapsule]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
+	@description ^= :$: Supports a crew of 3 for up to 48 hours.
+
+	@mass -= 0.009
+
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 51
+		@volume = 80
 
 		//	Food (6 hours).
 		TANK
@@ -307,6 +326,32 @@ PART
 			name = WasteWater
 			amount = 0
 			maxAmount = 3.7
+		}
+		//	Carbon Dioxide (capacity for 48 hours).
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 3068.9
+		}
+	}
+}
+
+//	================================================================================
+//	Configure Internal Model
+//	================================================================================
+
+@PART[ROC-SoyuzMSCapsule]:AFTER[RealismOverhaul]
+{
+	@INTERNAL[Soyuz_cockpit]
+	{
+		%scaleAll = 1.25, 1.25, 1.25
+
+		@MODULE[InternalSeat],*
+		{
+			%kerbalScale = 1.25, 1.25, 1.25
+			%kerbalOffset = 0.0, 0.0, 0.0
+			%kerbalEyeOffset = 0.0, 0.0, 0.0
 		}
 	}
 }
