--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
@@ -18,8 +18,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.3285832, 0.0, 0.0, 1.0, 0.0, 1, 1, 1
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+	node_stack_top = 0.0, 0.329, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
 	fx_gasBurst_white = 0.0, 0.3285832, 0.0, 0.0, 1.0, 0.0, decouple
@@ -53,13 +53,12 @@ PART
 	maximum_drag = 0.25
 	minimum_drag = 0.25
 	angularDrag = 0.5
-	crashTolerance = 10
+	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 673.15
 	stagingIcon = DECOUPLER_HOR
-	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
 
