--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
@@ -39,7 +39,7 @@ PART
 	description = The Soyuz and Progress docking system is the male part of a probe and drogue system. It's equipped with a rendezvous antenna and the soft-docking system. To use the docking system first extend the probe and then dock the two spacecraft. The probe will prevent them from connecting so that the Soyuz spacecraft can be rotated precisely to the desired position. Once that is done the probe is retracted, allowing hard docking to take place.
 	tags = soyuz, progress, DECQ
 
-	bulkheadProfiles = size1, srf
+	bulkheadProfiles = srf, size2
 
 	//	============================================================================
 	//	Thermo, Durability
@@ -50,12 +50,11 @@ PART
 	maximum_drag = 0.25
 	minimum_drag = 0.25
 	angularDrag = 0.5
-	crashTolerance = 10
+	crashTolerance = 14
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 673.15
-	fuelCrossFeed = False
 
 	//	============================================================================
 	//	Modules and Resources
@@ -104,6 +103,13 @@ PART
 		endEventGUIName = Retract Probe
 		actionGUIName = Toggle Probe
 		allowAnimationWhileShielded = False
+	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		surfaceAttachmentsPassable = False
 	}
 }
 
