--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
@@ -15,19 +15,14 @@ PART
 		model = ROCapsules/Assets/DECQ/SoyuzMS/BO
 	}
 
-	INTERNAL
-	{
-		name = Mobile_Processing_Lab_Int
-	}
-
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.243384, 0.0, 0.0, 1.0, 0.0, 1, 1, 1
-	node_stack_bottom = 0.0, -1.032171, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+	node_stack_top = 0.0, 1.243, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.032, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
-	node_stack_F1 = 0.0, 0.0, -1.5, 0.0, -1.0, 0.0, 1, 1, 1
-	node_stack_F2 = 0.0, 0.0, 1.5, 0.0, -1.0, 0.0, 1, 1, 1
+	node_stack_F1 = 0.0, 0.0, -1.5, 0.0, 0.0, -1.0, 2
+	node_stack_F2 = 0.0, 0.0, 1.5, 0.0, 0.0, 1.0, 2
 
 	attachRules = 1,0,1,1,0
 
@@ -46,38 +41,29 @@ PART
 	description = The Orbital Module (BO) of the Soyuz contains everything that it is not needed for reentry. This includes the docking system, the airlock and the KURS automatic docking antennas. It is jettisoned before entering the atmosphere.
 	tags = soyuz, progress, DECQ
 
-	vesselType = Ship
-	CrewCapacity = 3
-	bulkheadProfiles = size2, size1
+	bulkheadProfiles = srf, size2
 
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.735
+	mass = 1.05
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
 	angularDrag = 0.5
-	crashTolerance = 6
+	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 673.15
 	stagingIcon = DECOUPLER_HOR
-	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
 
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
-
-	MODULE
-	{
-		name = ModuleCommand
-		minimumCrew = 0
-	}
 
 	MODULE
 	{
@@ -111,6 +97,15 @@ PART
 		resourceAmount = 0.075
 		useResources = true
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = False
+		surfaceAttachmentsPassable = False
+		impassablenodes = F1, F2
+	}
 }
 
 //	==================================================
@@ -119,6 +114,10 @@ PART
 
 @PART[ROC-SoyuzMSOM]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
+	@description ^= :$: Provides support resources for a crew of 3 for up to 30 days.
+
+	@mass -= 0.315
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -160,6 +159,64 @@ PART
 			amount = 0
 			maxAmount = 443.3
 		}
+		//  Carbon Dioxide (capacity for 720 hours).
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 46033.9
+		}
+		//  CO2 scrubber canisters (capacity for 720 hours).
+		TANK
+		{
+			name = PotassiumSuperoxide
+			amount = 16.7
+			maxAmount = 66.6
+		}
+	}
+
+	MODULE
+	{
+		name = TacGenericConverter
+		converterName = CO2 Scrubber
+		StartActionName = Start CO2 Scrubber
+		StopActionName = Stop CO2 Scrubber
+		tag = Life Support
+		conversionRate = 3.0
+		GeneratesHeat = False
+		UseSpecialistBonus = False
+
+		INPUT_RESOURCE
+		{
+			ResourceName = CarbonDioxide
+			Ratio = 0.00589121
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.01
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = PotassiumSuperoxide
+			Ratio = 0.0000085683
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = WasteWater
+			Ratio = 0.0032924498
+			DumpExcess = True
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Waste
+			Ratio = 0.0000257297
+			DumpExcess = False
+		}
 	}
 }
 
@@ -174,6 +231,6 @@ PART
 	{
 		name = ModuleRealAntenna
 		referenceGain = 0.5
-		RFBand = UHF		//Default to UHF-band
+		RFBand = S		//Default to S-band
 	}
 }
