--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -18,8 +18,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.837448, 0.0, 0.0, 1.0, 0.0, 1, 1, 1
-	node_stack_bottom = 0.0, -0.3010498, 0.0, 0.0, -1.0, 0.0, 2, 1, 1
+	node_stack_top = 0.0, 1.837, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.301, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_DA = 0.8350143, -0.3357558, 0.7922449, 0.0, -1.0, 0.0, 1
 	//node_stack_US = 0.0, 1.786255, -1.18829, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
@@ -43,7 +43,7 @@ PART
 	description = The Soyuz Instrument and Service Module (PAO) contains everything that the Soyuz needs for orbital operations. It is jettisoned just before reentry.
 	tags = soyuz, progress, DECQ
 
-	bulkheadProfiles = size1, srf
+	bulkheadProfiles = size2
 
 	//	============================================================================
 	//	Thermo, Durability
@@ -60,7 +60,6 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 673.15
 	stagingIcon = LIQUID_ENGINE
-	fuelCrossFeed = True
 	stageOffset = 1
 	childStageOffset = 1
 	radiatorHeadroom = 0.4427
