--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
@@ -52,8 +52,8 @@ PART
 	minimum_drag = 0.25
 	angularDrag = 0.5
 	crashTolerance = 10
-	breakingTorque = 200
-	breakingForce = 200
+	breakingTorque = 250
+	breakingForce = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	thermalMassModifier = 2.0
@@ -80,7 +80,7 @@ PART
 	}
 
 	useSolarConfig = true
-	solarUseMass = true
+	solarUseMass = false
 
 	SolarConfig
 	{
