--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
@@ -18,8 +18,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.09653163, 0.0, 0.0, 1.0, 0.0, 1, 1, 1
-	node_stack_bottom = 0.0, -0.1313124, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+	node_stack_top = 0.0, 0.0965, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.131, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
 	CoPOffset = 0, 0.1, 0.0	
@@ -41,7 +41,7 @@ PART
 	description = The heat shield for the Soyuz TM/TMA/MS Descent Module. It is jettisoned after main parachute deployment.
 	tags = soyuz, progress, DECQ
 
-	bulkheadProfiles = size2, srf
+	bulkheadProfiles = size2
 
 	//	============================================================================
 	//	Thermo, Durability
@@ -52,11 +52,10 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 10
+	crashTolerance = 16
 	breakingForce = 250
 	breakingTorque = 250
 	stagingIcon = DECOUPLER_HOR
-	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
 
