Adjust Name and adjust realantenna configs & add a realantenna config to the solar panels

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDecoupler.cfg
@@ -37,10 +37,10 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Service Module Decoupler
+	title = Soyuz MS Service Module Decoupler
 	manufacturer = RKK Energia
 	description = A structural truss decoupling system that connects the Soyuz Service Module (PAO) to the Descent Module (SA).
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size2
 
