--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
@@ -34,10 +34,10 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = Soyuz/Progress Docking System
+	title = Soyuz MS/Progress Docking System
 	manufacturer = RKK Energia
 	description = The Soyuz and Progress docking system is the male part of a probe and drogue system. It's equipped with a rendezvous antenna and the soft-docking system. To use the docking system first extend the probe and then dock the two spacecraft. The probe will prevent them from connecting so that the Soyuz spacecraft can be rotated precisely to the desired position. Once that is done the probe is retracted, allowing hard docking to take place.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, progress, DECQ
 
 	bulkheadProfiles = srf, size2
 
@@ -84,18 +84,6 @@ PART
 	MODULE
 	{
 		name = ModuleAnimateGeneric
-		animationName = OPEN_ANTENNA
-		isOneShot = False
-		allowManualControl = True
-		startEventGUIName = Deploy Antenna
-		endEventGUIName = Stow Antenna
-		actionGUIName = Toggle Antenna
-		allowAnimationWhileShielded = False
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
 		animationName = DOCKING_PORT
 		isOneShot = False
 		allowManualControl = True
@@ -110,20 +98,5 @@ PART
 		name = ModuleConnectedLivingSpace
 		passable = True
 		surfaceAttachmentsPassable = False
-	}
-}
-
-//	================================================================================
-//	Configure RealAntennas
-//	================================================================================
-
-@PART[ROC-SoyuzMSDockingPort]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
-{
-	!MODULE[ModuleDataTransmitter],* {}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 0.5
-		RFBand = UHF		//Default to UHF-band
 	}
 }
