--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
@@ -36,10 +36,10 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Heatshield
+	title = Soyuz MS Heatshield
 	manufacturer = RKK Energia
 	description = The heat shield for the Soyuz TM/TMA/MS Descent Module. It is jettisoned after main parachute deployment.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size2
 
