--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
@@ -34,10 +34,10 @@ PART
 	category = Pods
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Orbital Module
+	title = Soyuz MS Orbital Module
 	manufacturer = RKK Energia
 	description = The Orbital Module (BO) of the Soyuz contains everything that it is not needed for reentry. This includes the docking system, the airlock and the KURS automatic docking antennas. It is jettisoned before entering the atmosphere.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = srf, size2
 
@@ -228,7 +228,7 @@ PART
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 0.5
-		RFBand = S		//Default to S-band
+		referenceGain = 1.0
+		RFBand = UHF		//Default to UHF-band
 	}
 }
