--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
@@ -35,10 +35,10 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Main Parachute
+	title = Soyuz MS Main Parachute
 	manufacturer = RKK Energia
 	description = The primary parachute of the Soyuz TM/TMA/MS Descent Module (SA).
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size1, srf
 
