--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSPeriscope.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSPeriscope.cfg
@@ -33,10 +33,10 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Vzor Periscope
+	title = Soyuz MS Vzor Periscope
 	manufacturer = RKK Energia
 	description = A periscope with two viewing ports. It is used to manually maintain attitude during free flight and to dock the spacecraft in the case of a KURS malfunction.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size1, srf
 
