--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -38,10 +38,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Soyuz TM/TMA/MS Service Module
+	title = Soyuz MS Service Module
 	manufacturer = RKK Energia
 	description = The Soyuz Instrument and Service Module (PAO) contains everything that the Soyuz needs for orbital operations. It is jettisoned just before reentry.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size2
 
@@ -366,5 +366,20 @@ PART
 			name = ElectricCharge
 			rate = 0.3
 		}
+	}
+}
+
+//	================================================================================
+//	Configure RealAntennas
+//	================================================================================
+
+@PART[ROC-SoyuzMSServiceModule]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8
+		RFBand = S		//Default to S-band
 	}
 }
