--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
@@ -35,10 +35,10 @@ PART
 	category = Electrical
 	subcategory = 0
 	
-	title = Soyuz/Progress Solar Array
+	title = Soyuz MS Solar Array
 	manufacturer = RKK Energia
 	description = A solar array used on modern Soyuz and Progress spacecraft variants. Efficient, reliable and lightweight.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = srf
 
@@ -87,5 +87,20 @@ PART
 		area = 14.586
 		level = 7
 		type = static
+	}
+}
+
+//	================================================================================
+//	Configure RealAntennas
+//	================================================================================
+
+@PART[ROC-SoyuzMSSolarPanel]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = UHF		//Default to UHF-band
 	}
 }
