--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
@@ -35,10 +35,10 @@ PART
 	category = Utility
 	subcategory = 0
 	
-	title = Soyuz TM/TMA/MS Emergency Parachute
+	title = Soyuz MS Emergency Parachute
 	manufacturer = RKK Energia
 	description = A fast-opening emergency parachute for the Soyuz Descent Module. It is used after the abort sequence and it also serves as a backup for the main parachute.
-	tags = soyuz, progress, DECQ
+	tags = soyuz ms, DECQ
 
 	bulkheadProfiles = size1, srf
 
