--- a/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
@@ -10,7 +10,8 @@ KSP_MODEL_SHADER
 	model = ROCapsules/Assets/DECQ/Apollo/CM_ForwardHS
 	model = ROCapsules/Assets/DECQ/Apollo/HGA
 	model = ROCapsules/Assets/DECQ/Apollo/RCS
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
 		
@@ -54,7 +55,8 @@ KSP_MODEL_SHADER
 	name = ROC-ApolloSM
 	
 	model = ROCapsules/Assets/DECQ/Apollo/SM
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
 		
