--- a/GameData/ROCapsules/PartConfigs/Dynasoar/ReflectionsConfig.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/ReflectionsConfig.cfg
@@ -6,121 +6,131 @@
 KSP_MODEL_SHADER
 {
 	name = DYNABODY
+
 	model = ROCapsules/Assets/LonesomeRobot/Dynamk2
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
-		
+
 		mesh = GLASS
-		
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 1.00
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 1.00
-			}
+		}
 	}
 }
 
 KSP_MODEL_SHADER
 {
 	name = DYNAPASS
+
 	model = ROCapsules/Assets/LonesomeRobot/DynaPass
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
-		
+
 		mesh = PASS_GLASS
-		
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 1.00
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 1.00
-			}
+		}
 	}
 }
 
 KSP_MODEL_SHADER
 {
 	name = DYNAANT
+
 	model = ROCapsules/Assets/LonesomeRobot/DynaTeleAnt
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
-	
+
 		mesh = MAST
-			
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 0.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 0.75
-			}
+		}
 	} 
 }
 
 KSP_MODEL_SHADER
 {
 	name = SIVDOCK
+
 	model = ROCapsules/Assets/LonesomeRobot/SIVDOCK
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
-			
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 0.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 0.75
-			}
+		}
 	} 
 }
 
 KSP_MODEL_SHADER
 {
 	name = DYNADOCK
+
 	model = ROCapsules/Assets/LonesomeRobot/Dynadockingarms
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
-		
+
 		mesh = BASE-R
 		mesh = R-ARM
 		mesh = R-LGR
@@ -129,49 +139,51 @@ KSP_MODEL_SHADER
 		mesh = L-ARM
 		mesh = L-LGR
 		mesh = L-UGR
-			
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 0.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 0.75
-			}
+		}
 	}
 }
 
 KSP_MODEL_SHADER
 {
 	name = TRANS
+
 	model = ROCapsules/Assets/LonesomeRobot/TRANSITION_STG
-	TEXTURE
+
+	MATERIAL
 	{	
 		shader = SSTU/PBR/Metallic
 
 		mesh = Transition_Stage_Nozzles
-			
+
 		PROPERTY
-			{
+		{
 			name = _Color
 			color = 1.75,1.75,1.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Metal
 			float = 0.75
-			}
-			PROPERTY
-			{
+		}
+		PROPERTY
+		{
 			name = _Smoothness
 			float = 0.75
-			}
+		}
 	}
 }
