--- a/GameData/ROCapsules/PartConfigs/LEM/TU_Support_LEM.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/TU_Support_LEM.cfg
@@ -5,17 +5,18 @@
 KSP_MODEL_SHADER
 {
 	name = ROC-LEM
-	
+
 	model = ROCapsules/Assets/DECQ/LEM/LEM_Ascent
 	model = ROCapsules/Assets/DECQ/LEM/LEM_Decoupler
 	model = ROCapsules/Assets/DECQ/LEM/LEM_Descent
 	model = ROCapsules/Assets/DECQ/LEM/LEM_dockingPort
 	model = ROCapsules/Assets/DECQ/LEM/LEM_LMDE
 	model = ROCapsules/Assets/DECQ/LEM/LEM_Rover
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = SSTU/PBR/Metallic
-		
+
 		PROPERTY
 		{
 			name = _Color
