--- a/GameData/ROCapsules/PartConfigs/Orion/TU_Support_Orion.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/TU_Support_Orion.cfg
@@ -5,15 +5,16 @@
 KSP_MODEL_SHADER
 {
 	name = ROC-OrionCM
-	
+
 	model = ROCapsules/Assets/DECQ/Orion/ORION_COMMAND_POD_SILVER
 	model = ROCapsules/Assets/DECQ/Orion/DOCING_PORT_SILVER
 	model = ROCapsules/Assets/DECQ/Apollo/HGA
 	model = ROCapsules/Assets/DECQ/Apollo/RCS
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Cylinder_028
 		mesh = Cylinder_016
 		mesh = Cylinder_000
@@ -21,7 +22,7 @@ KSP_MODEL_SHADER
 		mesh = Cylinder_023
 		// Forward Heat Shield
 		mesh = Cylinder_012
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -43,15 +44,15 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-OrionESM
-	
+
 	model = ROCapsules/Assets/DECQ/Orion/ORION_SERVISE
 	model = ROCapsules/Assets/DECQ/Orion/ORION_RCS
 	model = ROCapsules/Assets/DECQ/Orion/ORION_SP
-	
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		PROPERTY
 		{
 			name = _Color
