--- a/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
@@ -5,13 +5,13 @@
 KSP_MODEL_SHADER
 {
 	name = ROC-AgenaPort
-	
+
 	model = ROCapsules/Assets/BDB/GATV/bluedog_GATV_DockingPort
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -29,17 +29,19 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiEquipmentSection
-	
+
 	model = ROCapsules/Assets/FASA/Gemini_UtilityPack
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Engine_Casing
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -61,12 +63,13 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiRetrogradeSection
-	
+
 	model = ROCapsules/Assets/FASA/Gemini_Utility_SasRcs
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -88,14 +91,15 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiCM
-	
+
 	model = ROCapsules/Assets/FASA/Gemini_Pod2
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = pod2
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -117,15 +121,16 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiReentryControlSystem
-	
+
 	model = ROCapsules/Assets/FASA/Gemini_Pod2_RCS
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = base
 		mesh = Pod2_RCS
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -147,15 +152,16 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiNosecone
-	
+
 	model = ROCapsules/Assets/FASA/GeminiNosecone
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Gemini_Indexing_Bar
 		mesh = Gemini_Nosecone
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -177,14 +183,15 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiNoseCap
-	
+
 	model = ROCapsules/Assets/FASA/GeminiNoseconeCap
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Gemini_Nosecone_Cap
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -202,18 +209,20 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiNoseconeAero
-	
+
 	model = ROCapsules/Assets/FASA/GeminiNoseconeAero
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Gemini_Nosecone
 		mesh = Gemini_Nosecone_Cap
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -231,16 +240,17 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiAntenna
-	
+
 	model = ROCapsules/Assets/FASA/GeminiAntenna
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -258,16 +268,17 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiRCS
-	
+
 	model = ROCapsules/Assets/FASA/GeminiRCSThruster
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -285,16 +296,17 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiWing
-	
+
 	model = ROCapsules/Assets/FASA/WingGemini
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -312,16 +324,17 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiFlightPack
-	
+
 	model = ROCapsules/Assets/FASA/WingGemini_FP
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -339,16 +352,17 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+
 KSP_MODEL_SHADER
 {
 	name = ROC-GeminiFlightPackContSurf
-	
+
 	model = ROCapsules/Assets/FASA/WingGemini_FP_CtrlSurf
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
