Fix RCS Thrusters

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -65,21 +65,21 @@ PART
 		thrusterPower = 0.2
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-		PROPELLANT
-		{
-			name = MMH
-			ratio = 0.456
-		}
-		PROPELLANT
-		{
-			name = NTO
-			ratio = 0.544
-		}
-		atmosphereCurve
-		{
-			key,0 = 0 260
-			key,1 = 1 100
-		}
+        PROPELLANT
+        {
+            name = MMH
+            ratio = 0.456
+        }
+        PROPELLANT
+        {
+            name = NTO
+            ratio = 0.544
+        }
+        atmosphereCurve
+        {
+            key = 0 260
+            key = 1 100
+        }
 	}
 
 	//	============================================================================
