Fix Dragon Super Dracos, Fix Dragon Docking Port

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
@@ -23,7 +23,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.880697, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.87176, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
 	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
@@ -249,39 +249,50 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesRF
-		engineID = Superdraco
-		EngineType = LiquidFuel
 		thrustVectorTransformName = SmokeTransform
-		exhaustDamage = False
-		throttleLocked = False
-		ignitionThreshold = 0.1
-		minThrust = 136
-		maxThrust = 680
-		heatProduction = 100
-		PROPELLANT
+		EngineType = LiquidFuel
+	}
+
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = Dragon SuperDracos
+
+		CONFIG
 		{
-			name = MMH
-			ratio = 0.5629
-			DrawGauge = True
-		}
-		PROPELLANT
-		{
-			name = NTO
-			ratio = 0.4371
-			DrawGauge = False		
-		}
-		atmosphereCurve
-		{
-			key,0 = 0 280
-			key,1 = 1 240
-		}
-		ullage = False
-		pressureFed = True
-		ignitions = 0	
-		IGNITOR_RESOURCE
-		{
-			name = ElectricCharge
-			amount = 1.0
+			name = Dragon SuperDracos
+			minThrust = 136
+			maxThrust = 680
+			heatProduction = 100
+
+			PROPELLANT
+			{
+				name = MMH
+				ratio = 0.5629
+				DrawGauge = True
+			}
+			PROPELLANT
+			{
+				name = NTO
+				ratio = 0.4371
+				DrawGauge = False		
+			}
+			atmosphereCurve
+			{
+				key = 0 280
+				key = 1 240
+			}
+
+			ullage = False
+			pressureFed = True
+			ignitions = 0
+
+			IGNITOR_RESOURCE
+			{
+				name = ElectricCharge
+				amount = 1.0
+			}
 		}
 	}
 
@@ -398,7 +409,6 @@ PART
 			isTweakable = False
 		}
 	}
-
 }
 
 //	================================================================================
@@ -428,11 +438,11 @@ PART
 //	Configure TestFlight
 //	================================================================================
 
-@PART[ROC-Dragon2CMLunar]:HAS[!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CMLunar]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
-		name = SuperDraco
+		name = Dragon SuperDracos
 		ratedBurnTime = 350
 		ignitionReliabilityStart = 0.98
 		ignitionReliabilityEnd = 0.995
