--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
@@ -221,13 +221,15 @@ PART
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
-		configuration = Starship Lunar Engine Cluster
-		modded = false
+		configuration = Starship Lunar Engines
+
 		CONFIG
 		{
-			name = Starship Lunar Engine Cluster
-			maxThrust = 3362.85
+			name = Starship Lunar Engines
 			minThrust = 1345.14
+			maxThrust = 3362.85
+			heatProduction = 100
+
 			PROPELLANT
 			{
 				name = LqdMethane
@@ -242,7 +244,7 @@ PART
 			atmosphereCurve
 			{
 				key = 0 380
-				key = 1 350
+				key = 1 280
 			}
 
 			ullage = True
@@ -254,12 +256,12 @@ PART
 				name = ElectricCharge
 				amount = 0.5
 			}
-			IGNITOR_RESOURCE // Touch-Lit System uses the same propellant has the engines
+			IGNITOR_RESOURCE // Torch-Lit System uses the same propellant has the engines
 			{
 				name = LqdMethane
 				amount = 0.05
 			}
-			IGNITOR_RESOURCE // Touch-Lit System uses the same propellant has the engines
+			IGNITOR_RESOURCE // Torch-Lit System uses the same propellant has the engines
 			{
 				name = LqdOxygen
 				amount = 0.33
@@ -426,11 +428,11 @@ PART
 	}
 }
 
-@PART[*]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Starship?Lunar?Engine?Cluster]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-StarshipLunarTank]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
-		name = Starship Lunar Engine Cluster
+		name = Starship Lunar Engines
 		ratedBurnTime = 3600 //Guess
 		ignitionReliabilityStart = 0.98 //Slight Chance of the Torch-lit system failing
 		ignitionReliabilityEnd = 0.995 //Slight Chance of the Torch-lit system failing
