--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -387,6 +387,16 @@ PART
 
 	MODULE
 	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.5
+		maxDistance = 30
+		falloff = 1.7
+		thrustTransformName = thrustTransform
+	}
+
+	MODULE
+	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = Apollo
