Fix Plumes and add plumes to soyuz service engine

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -381,11 +381,15 @@ PART
 	{
 		name = Solid-Sepmotor
 		transformName = thrustTransform
-		localRotation = 0,0,0
-		localPosition = 0,0,-0.05
-		fixedScale = 0.8
-		energy = 1
-		speed = 1
+		localRotation = 0.0, 0.0, 0.0
+		fixedScale = 1.0
+		energy = 0.5
+		speed = 1.0
+		emissionMult = 0.5
+		plumePosition = 0.0, 0.0, -0.1
+		plumeScale = 0.8
+		flarePosition = 0.0, 0.0, 0.0
+		flareScale = 1.0
 	}
 
 	@MODULE[ModuleEngines*]
