--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -383,3 +383,39 @@ PART
 		RFBand = S		//Default to S-band
 	}
 }
+
+//	================================================================================
+//	Configure RealPlume
+//	================================================================================
+
+@PART[ROC-SoyuzMSServiceModule]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+	PLUME
+	{
+		name = Hypergolic-OMS-White
+		transformName = thrustTransform
+		localRotation = 0.0, 0.0, 0.0
+		fixedScale = 1.0
+		energy = 1.0
+		speed = 1.0
+		emissionMult = 0.5
+		plumePosition = 0.0, 0.0, 0.0
+		plumeScale = 0.35
+		flarePosition = 0.0, 0.0, -0.8
+		flareScale = 0.35
+	}
+
+	@MODULE[ModuleEngines*]
+	{
+		%powerEffectName = Hypergolic-OMS-White
+		!runningEffectName = DELETE
+	}
+
+	@MODULE[ModuleEngineConfigs]
+	{
+		@CONFIG,*
+		{
+			%powerEffectName = Hypergolic-OMS-White
+		}
+	}
+}
