--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
@@ -150,13 +150,6 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-		defaultControlPointDisplayName = Default
-		CONTROLPOINT
-		{
-			name = reverse
-			displayName = Reversed
-			orientation = 0,0,180
-		}
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -241,15 +234,8 @@ PART
 
 	MODULE
 	{
-		name = ModuleConductionMultiplier
-		modifiedConductionFactor = 0.003
-		convectionFluxThreshold = 3000
-	}
-
-	MODULE
-	{
 		name = ModuleEnginesRF
-		thrustVectorTransformName = SmokeTransform
+		thrustVectorTransformName = smokePoint
 		EngineType = LiquidFuel
 	}
 
@@ -300,11 +286,9 @@ PART
 	{
 		name = FXModuleAnimateThrottle
 		animationName = KK_SpXCD_superdraco
-		responseSpeed = 0.001
-		layer = 1
 		dependOnEngineState = True
+		responseSpeed = 0.001
 		dependOnThrottle = True
-		weightOnOperational = True
 	}
 
 	MODULE
@@ -314,7 +298,7 @@ PART
 		fxMax = 0.5
 		maxDistance = 30
 		falloff = 1.5
-		thrustTransformName = SmokeTransform
+		thrustTransformName = smokePoint
 	}
 
 	MODULE
@@ -438,7 +422,7 @@ PART
 //	Configure TestFlight
 //	================================================================================
 
-@PART[ROC-Dragon2CMLunar]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CMLunar]:HAS[[@CONFIG[Dragon?SuperDracos]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
@@ -460,7 +444,7 @@ PART
 	PLUME_TEMPLATE
 	{
 		name = Hypergolic_LowerOrangeShock
-		transformName = SmokeTransform
+		transformName = smokePoint
 		scale = 0.16
 		offset = 0
 	}
