--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -59,7 +59,6 @@ PART
 	breakingTorque = 200
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
-	fuelCrossFeed = True
 	emissiveConstant = 0.6 // not too absorptive for reentry
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
@@ -110,11 +109,11 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-		defaultControlPointDisplayName = Default
+		defaultControlPointDisplayName = Prograde
 		CONTROLPOINT
 		{
 			name = reverse
-			displayName = Reversed
+			displayName = Retrograde
 			orientation = 0,0,180
 		}
 		RESOURCE
