--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
@@ -64,7 +64,6 @@ PART
 	crashTolerance = 12
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
-	fuelCrossFeed = True
 	emissiveConstant = 0.6 // not too absorptive for reentry
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
@@ -428,7 +427,7 @@ PART
 	}
 }
 
-@PART[ROC-StarshipLunarTank]:HAS[@MODULE[ModuleEngineConfigs]:HAS[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-StarshipLunarTank]:HAS[[@CONFIG[Starship?Lunar?Engines]],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
